new: mf sector data flow with plot
